<resources>
    <string name="app_name" translatable="false">Salam Indonesia</string>
    <string name="name_prov" translatable="false">Nama Provinsi</string>
    <string name="lorem" translatable="false">lorem ipsum dolor sit amet</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="button">Show Location</string>
    <string name="deskripsi_singkat">Deskripsi Singkat</string>
    <string name="show_location">Show Location</string>
    <string-array name="data_name">
        <item>Nanggroe Aceh Darussalam</item>
        <item>Sumatera Utara</item>
        <item>Riau</item>
        <item>Kepulauan Riau</item>
        <item>Jambi</item>
        <item>Bengkulu</item>
        <item>Sumatera Barat</item>
        <item>Sumatera Selatan</item>
        <item>Bangka Belitung</item>
        <item>Lampung</item>
        <item>Banten</item>
        <item>DKI Jakarta</item>
        <item>Jawa Barat</item>
        <item>Jawa Tengah</item>
        <item>Daerah Istimewa Yogyakarta</item>
        <item>Jawa Timur</item>
        <item>Kalimantan Utara</item>
        <item>Kalimantan Timur</item>
        <item>Kalimantan Barat</item>
        <item>Kalimantan Tengah</item>
        <item>Kalimantan Selatan</item>
        <item>Bali</item>
        <item>Nusa Tenggara Timur</item>
        <item>Nusa Tenggara Barat</item>
        <item>Gorontalo</item>
        <item>Sulawesi Utara</item>
        <item>Sulawesi Tengah</item>
        <item>Sulawesi Barat</item>
        <item>Sulawesi Tenggara</item>
        <item>Sulawesi Selatan</item>
        <item>Maluku Utara</item>
        <item>Maluku</item>
        <item>Papua</item>
        <item>Papua Barat</item>
    </string-array>
</resources>