<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <FrameLayout
        android:id="@+id/frame_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="1dp"
        android:background="@color/red">
        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_marginStart="25dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="50dp"
            android:text="@string/name_prov"
            android:textSize="34sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </FrameLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="500dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/deskripsi_singkat"
                        android:textSize="16sp"
                        android:textStyle="bold"></TextView>

                    <TextView
                        android:id="@+id/txt_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/lorem"
                        android:textSize="16sp"></TextView>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="Suku Adat"
                        android:textSize="16sp"
                        android:textStyle="bold"></TextView>

                    <TextView
                        android:id="@+id/txt_suku"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/lorem"
                        android:textSize="16sp"></TextView>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="Bahasa Daerah"
                        android:textSize="16sp"
                        android:textStyle="bold"></TextView>

                    <TextView
                        android:id="@+id/txt_bahasa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/lorem"
                        android:textSize="16sp"></TextView>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="Kepala Daerah"
                        android:textSize="16sp"
                        android:textStyle="bold"></TextView>

                    <TextView
                        android:id="@+id/txt_kepala"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/lorem"
                        android:textSize="16sp"></TextView>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="Ibukota"
                        android:textSize="16sp"
                        android:textStyle="bold"></TextView>

                    <TextView
                        android:id="@+id/txt_ibukota"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/lorem"
                        android:textSize="16sp"></TextView>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/show_location"
        android:textColor="#ffff"
        android:onClick="Maps"
        android:textSize="20sp" />


</LinearLayout>